<resources>
    <string name="app_name">消防检维</string>
    <string name="home_special_tools">消防检维专用工具</string>
    <string name="home_annual_fire_inspection">消防年检</string>
    <string name="home_fire_inspection">消防巡检</string>
    <string name="home_hidden_danger">隐患库</string>
    <string name="home_legal_library">法律法规库</string>
    <string name="laws_regulations">法律法规</string>
    <string name="product_report">生成报告</string>
    <string name="serial_number">序号</string>
    <string name="inspection_items">检查项目</string>
    <string name="inspection_contents">检查内容</string>
    <string name="demand">合格需求</string>
    <string name="inspection_standard">检查标准</string>
    <string name="is_qualified">是否合格</string>
    <string name="scene_photos">现场照片</string>
    <string name="hidden_danger">隐患描述</string>
    <string name="fire_report">消防年检报告</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="other"> --- </string>
    <string name="daoru">导入</string>
    <string name="PleaseInputText">请输入查询信息</string>
    <string name="report_output">导出</string>
    <string name="search">搜索</string>
    <string name="Statistics">统计</string>
    <string name="checkReport">消防巡检报告</string>
    <string name="xj_xfsp">消防水炮</string>
    <string-array name="spingarr">
        <item>请选择公司</item>
    </string-array>
    <string-array name="spingarr1">
        <item>请选择油田</item>
    </string-array>
    <string-array name="spingarr3">
        <item>请选择平台</item>
    </string-array>
    <string-array name="spingarr4">
        <item>请选择系统</item>
    </string-array>
    <string-array name="spingarr5">
        <item>选择负责专业</item>
    </string-array>
</resources>
