<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_item"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginTop="10dp"
    android:background="#ffffff"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/serial_number"
        android:textColor="@color/title_black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/inspection_items"
        android:textColor="@color/title_black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/inspection_contents"
        android:textColor="@color/title_black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/demand"
        android:textColor="@color/title_black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/inspection_standard"
        android:textColor="@color/title_black"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:text="@string/is_qualified"
            android:textColor="@color/title_black"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv7"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/scene_photos"
        android:textColor="@color/title_black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv8"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="隐患分析"
        android:textColor="@color/title_black"
        android:textSize="12sp"
        android:visibility="gone" />

</LinearLayout>