<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlayout_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!--android:background="@mipmap/transparent_bg"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/listview_border_margin"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/rl_yes"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/yes"
                android:textColor="#000000"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_no"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no"
                android:textColor="#000000"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_other"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/other"
                android:textColor="#000000"
                android:textSize="13sp" />
        </RelativeLayout>


    </LinearLayout>
</RelativeLayout>